Move blackmagic middleman code to a module
#preflight 6398d1338c64c74ac8a2b085
#rb simon.therriault
#jira UE-171901

[CL 23507809 by jeremie roy in ue5-release-engine-staging branch]

--- a/Engine/Plugins/Media/BlackmagicMedia/BlackmagicMedia.uplugin
+++ b/Engine/Plugins/Media/BlackmagicMedia/BlackmagicMedia.uplugin
@@ -15,6 +15,12 @@
 	"SupportedTargetPlatforms": [ "Win64", "Linux" ],
 	"Modules": [
 		{
+			"Name": "BlackmagicCore",
+			"Type": "Runtime",
+			"LoadingPhase": "PreLoadingScreen",
+			"PlatformAllowList": [ "Win64", "Linux" ]
+		},
+		{
 			"Name": "BlackmagicMedia",
 			"Type": "Runtime",
 			"LoadingPhase": "PreLoadingScreen",
