UnrealCloudDDC - Improved performance for resolving objects with a large number of attachments by fixing so that the content id resolve can run in parallel.
#preflight none

[CL 23511398 by joakim lindqvist in ue5-release-engine-staging branch]

--- a/Engine/Source/Programs/UnrealCloudDDC/Jupiter/Tests/Functional/Jupiter.Tests.Functional.csproj
+++ b/Engine/Source/Programs/UnrealCloudDDC/Jupiter/Tests/Functional/Jupiter.Tests.Functional.csproj
@@ -56,6 +56,9 @@
     <None Update="ContentId\Payloads\UncompressedTexture_CAS_dea81b6c3b565bb5089695377c98ce0f1c13b0c3.udd">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Objects\Payloads\lyra.cb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
