Ensure that Zen as a local service can be configured to follow the same commandline overrides as a filesystem cache store.  Also ensure that if the configured override mechanisms for cache store paths yield a path of "None" that we disable the Zen DDC cache.  These are in support of using Zen as a drop-in replacement for an existing filesystem DDC store.
#rb devin.doucette
#preflight 6398ea4e680483bcb1057b0a

[CL 23517061 by zousar shaker in ue5-release-engine-staging branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2206,6 +2206,7 @@ AutoLaunch=true
 [Zen.AutoLaunch]
 DataPath=%APPSETTINGSDIR%Zen/Data
 LocalDataCachePathEnvOverride=UE-LocalDataCachePath
+LocalDataCachePathCommandLineOverride=LocalDataCachePath
 LocalDataCachePathEditorOverrideSetting=LocalDerivedDataCache
 ExtraArgs=--http asio --gc-cache-duration-seconds 2937600 --gc-interval-seconds 21600
 
