--- a/Engine/Plugins/VirtualProduction/DMX/DMXEngine/DMXEngine.uplugin
+++ b/Engine/Plugins/VirtualProduction/DMX/DMXEngine/DMXEngine.uplugin
@@ -19,6 +19,11 @@
 			"LoadingPhase": "Default"
 		},
 		{
+			"Name": "DMXControlConsole",
+			"Type": "Editor",
+			"LoadingPhase": "Default"
+		},
+		{
 			"Name": "DMXEditor",
 			"Type": "Editor",
 			"LoadingPhase": "Default"
