--- a/Engine/Plugins/Experimental/UIFramework/UIFramework.uplugin
+++ b/Engine/Plugins/Experimental/UIFramework/UIFramework.uplugin
@@ -20,5 +20,11 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		}
+	],
+	"Plugins": [
+		{
+			"Name": "ModelViewViewModel",
+			"Enabled": true
+		}
 	]
 }
