DMX - Make DMX Control Console a runtime feature
#jira UE-173566
#rb Dominik.Peacock
#preflight 63bc24adbf54fa7b36e64f17

[CL 23612125 by flo schar in ue5-release-engine-staging branch]

--- a/Engine/Plugins/VirtualProduction/DMX/DMXEngine/DMXEngine.uplugin
+++ b/Engine/Plugins/VirtualProduction/DMX/DMXEngine/DMXEngine.uplugin
@@ -20,6 +20,11 @@
 		},
 		{
 			"Name": "DMXControlConsole",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "DMXControlConsoleEditor",
 			"Type": "Editor",
 			"LoadingPhase": "Default"
 		},
