Adding ElectraPlayerPluginHandler to ElectraPlayer plugin #preflight 63bccb5068068a8bd61e17b3 [FYI] achim.moller, jens.petersam
[CL 23630132 by chris adams in ue5-release-engine-staging branch]

--- a/Engine/Plugins/Media/ElectraPlayer/ElectraPlayer.uplugin
+++ b/Engine/Plugins/Media/ElectraPlayer/ElectraPlayer.uplugin
@@ -16,17 +16,21 @@
 	"Installed": false,
 	"Modules": [
 		{
+			"Name": "ElectraPlayerPluginHandler",
+			"Type": "RuntimeNoCommandlet",
+			"LoadingPhase": "PreLoadingScreen",
+			"TargetDenyList": [ "Server" ]
+		},
+		{
 			"Name": "ElectraPlayerRuntime",
 			"Type": "RuntimeNoCommandlet",
 			"LoadingPhase": "PreLoadingScreen",
-			"PlatformAllowList": [ "Win64", "Mac", "IOS", "Android", "Linux" ],
 			"TargetDenyList": [ "Server" ]
 		},
 		{
 			"Name": "ElectraPlayerPlugin",
 			"Type": "RuntimeNoCommandlet",
 			"LoadingPhase": "PreLoadingScreen",
-			"PlatformAllowList": [ "Win64", "Mac", "IOS", "Android", "Linux" ],
 			"TargetDenyList": [ "Server" ]
 		},
 		{
@@ -43,6 +47,7 @@
 			"PlatformAllowList": [ "Win64", "Mac", "IOS", "Android", "Linux" ],
 			"TargetDenyList": [ "Server" ]
 		}
+		
 	],
 	"Plugins": [
 		{
