Updating gitignore to allow yaml & dockerfiles into the repo
#rnx
#jira none
#rb none
#preflight none

[CL 23645609 by ryan hummer in ue5-release-engine-staging branch]

--- a/.gitignore
+++ b/.gitignore
@@ -91,8 +91,11 @@
 !*.config
 !*.version
 !.git*
+!.dockerignore
 !.editorconfig
 !.plist
+!.yaml
+!.yml
 
 # Projects and makefiles
 !*.cmake
@@ -108,6 +111,7 @@
 !*.xcconfig
 !*.vsprops
 !*.snippet
+!Dockerfile
 !Makefile
 !Makefile.*
 !Settings.settings
