#jira UE-168524 Enable ComputeFramework on PC Vulkan. #preflight ini file only
[CL 23645749 by jeremy moore in ue5-release-engine-staging branch]

--- a/Engine/Config/VulkanPC/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/VulkanPC/DataDrivenPlatformInfo.ini
@@ -92,8 +92,7 @@ bRequiresExplicit128bitRT = false
 bTargetsTiledGPU = false
 bNeedsOfflineCompiler = false
 
-; //#todo-vulkanddpi
-bSupportsComputeFramework = false
+bSupportsComputeFramework = true
 
 ; //#todo-vulkanddpi
 bSupportsDualSourceBlending = true
