Lumen character lighting improvements  * Fixed ScreenProbeGather Screen Traces missing nearby features, which was happening due to the bias needed for downsampled HZB tracing.  ScreenProbeGather Screen Traces now use full res HZB tracing.  * Hair Voxel Occlusion is now traced for the full resolution Bent Normal, Lumen Reflection HWRT, and Lumen Visualize HWRT  * Added a HWRT version of ScreenSpaceBentNormal, which is too slow to use (.12ms ScreenSpace vs 1.75ms HWRT) but still useful as a reference  * Renamed ScreenSpaceBentNormal feature to ShortRangeAO, now that it's no longer just screen traces (r.Lumen.ScreenProbeGather.ShortRangeAO)  * Enabled ShortRangeAO on GI High settings by default (60fps mode)  * Clamp albedo used for the AO Multibounce approximation (DistantIlluminationRescale) to increase the amount of occlusion when a very light surface is next to a very dark surface (r.Lumen.ScreenProbeGather.ShortRangeAO.MaxMultibounceAlbedo)  * Disabled HairScreenTrace on both ScreenProbeGather and ShortRangeAO as it causes to over-occlusion and costs too much #preflight 63bf2dedaf3ebedd999a3f8a
[CL 23658087 by daniel wright in ue5-release-engine-staging branch]

--- a/Engine/Config/BaseScalability.ini
+++ b/Engine/Config/BaseScalability.ini
@@ -261,13 +261,13 @@ r.LumenScene.Radiosity.HemisphereProbeResolution=3
 r.Lumen.TraceMeshSDFs.Allow=0
 r.Lumen.ScreenProbeGather.RadianceCache.ProbeResolution=16
 r.Lumen.ScreenProbeGather.RadianceCache.NumProbesToTraceBudget=300
-r.Lumen.ScreenProbeGather.ScreenSpaceBentNormal=0
 r.Lumen.ScreenProbeGather.DownsampleFactor=32
 r.Lumen.ScreenProbeGather.TracingOctahedronResolution=8
 r.Lumen.ScreenProbeGather.IrradianceFormat=1
 r.Lumen.ScreenProbeGather.StochasticInterpolation=1
 r.Lumen.ScreenProbeGather.FullResolutionJitterWidth=1
 r.Lumen.ScreenProbeGather.TwoSidedFoliageBackfaceDiffuse=0
+r.Lumen.ScreenProbeGather.ScreenTraces.HZBTraversal.FullResDepth=0
 r.Lumen.Reflections.MaxRoughnessToTraceForFoliage=0.2
 r.Lumen.TranslucencyVolume.GridPixelSize=64
 r.Lumen.TranslucencyVolume.TraceFromVolume=0
@@ -283,13 +283,13 @@ r.LumenScene.Radiosity.HemisphereProbeResolution=4
 r.Lumen.TraceMeshSDFs.Allow=1
 r.Lumen.ScreenProbeGather.RadianceCache.ProbeResolution=32
 r.Lumen.ScreenProbeGather.RadianceCache.NumProbesToTraceBudget=300
-r.Lumen.ScreenProbeGather.ScreenSpaceBentNormal=1
 r.Lumen.ScreenProbeGather.DownsampleFactor=16
 r.Lumen.ScreenProbeGather.TracingOctahedronResolution=8
 r.Lumen.ScreenProbeGather.IrradianceFormat=0
 r.Lumen.ScreenProbeGather.StochasticInterpolation=0
 r.Lumen.ScreenProbeGather.FullResolutionJitterWidth=1
 r.Lumen.ScreenProbeGather.TwoSidedFoliageBackfaceDiffuse=1
+r.Lumen.ScreenProbeGather.ScreenTraces.HZBTraversal.FullResDepth=1
 r.Lumen.Reflections.MaxRoughnessToTraceForFoliage=0.4
 r.Lumen.TranslucencyVolume.GridPixelSize=32
 r.Lumen.TranslucencyVolume.TraceFromVolume=1
@@ -306,13 +306,13 @@ r.LumenScene.Radiosity.HemisphereProbeResolution=4
 r.Lumen.TraceMeshSDFs.Allow=1
 r.Lumen.ScreenProbeGather.RadianceCache.ProbeResolution=32
 r.Lumen.ScreenProbeGather.RadianceCache.NumProbesToTraceBudget=1000
-r.Lumen.ScreenProbeGather.ScreenSpaceBentNormal=1
 r.Lumen.ScreenProbeGather.DownsampleFactor=8
 r.Lumen.ScreenProbeGather.TracingOctahedronResolution=16
 r.Lumen.ScreenProbeGather.IrradianceFormat=0
 r.Lumen.ScreenProbeGather.StochasticInterpolation=0
 r.Lumen.ScreenProbeGather.FullResolutionJitterWidth=.5
 r.Lumen.ScreenProbeGather.TwoSidedFoliageBackfaceDiffuse=1
+r.Lumen.ScreenProbeGather.ScreenTraces.HZBTraversal.FullResDepth=1
 r.Lumen.Reflections.Foliage=1
 r.Lumen.TranslucencyVolume.GridPixelSize=32
 r.Lumen.TranslucencyVolume.TraceFromVolume=1
