Move VPSettings and VPRoles into their own modules / plugins.
#jira UE-168182
#preflight 63bf65516e6e8d46623b437a
#rb jeremie.roy

[CL 23662360 by jason walter in ue5-release-engine-staging branch]

--- a/Engine/Plugins/Experimental/VirtualProductionUtilities/VirtualProductionUtilities.uplugin
+++ b/Engine/Plugins/Experimental/VirtualProductionUtilities/VirtualProductionUtilities.uplugin
@@ -40,16 +40,6 @@
 			"LoadingPhase": "PostDefault"
 		},
 		{
-			"Name": "VPRoles",
-			"Type": "Runtime",
-			"LoadingPhase": "Default"
-		},
-		{
-			"Name": "VPRolesEditor",
-			"Type": "Editor",
-			"LoadingPhase": "Default"
-		},
-		{
 			"Name": "VPSpline",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
@@ -86,7 +76,11 @@
 			"Enabled": true
 		},
 		{
-			"Name": "GameplayTagsEditor",
+			"Name": "VPRoles",
+			"Enabled": true
+		},
+		{
+			"Name": "VPSettings",
 			"Enabled": true
 		},
 		{
