- Rename EncryptionKey to ClientEncryptionKey in config to fix EncryptionKey getting removed during packaging due to IniKeyDenylist=EncryptionKey entry in BaseEngine.ini, breaking Player/TitleDataStorage
#jira UE-173714
[REVIEW] [at]Josh.Adams [at]Michael.Kirzinger [at]Alejandro.Aguilar [at]Sam.Zamani
#preflight 63c01c3d763c6c1064a14f98

[CL 23662794 by chris varnsverry in ue5-release-engine-staging branch]

--- a/Engine/Config/ConfigRedirects.ini
+++ b/Engine/Config/ConfigRedirects.ini
@@ -39,3 +39,12 @@ bDisableDomainWhitelist=bDisableDomainAllowlist
 
 [WinHttpWebSocket]
 bDisableDomainWhitelist=bDisableDomainAllowlist
+
+[OnlineServices.EOS]
+EncryptionKey=ClientEncryptionKey
+
+[EOSVoiceChat]
+EncryptionKey=ClientEncryptionKey
+
+[/Script/OnlineSubsystemEOS.EOSSettings]
+EncryptionKey=ClientEncryptionKey
