Fix for: Packaging Content Examples fails with error: undefined symbol: UPhysicsControlComponent
#jira UE-173344
#rb trivial
#preflight 63c01ece345a532dfc20e0c0

[CL 23662926 by danny chapman in ue5-release-engine-staging branch]

--- a/Engine/Plugins/Experimental/PhysicsControl/PhysicsControl.uplugin
+++ b/Engine/Plugins/Experimental/PhysicsControl/PhysicsControl.uplugin
@@ -3,8 +3,8 @@
 	"Version": 1,
 	"VersionName": "1.0",
 	"FriendlyName": "PhysicsControl",
-	"Description": "",
-	"Category": "Other",
+	"Description": "Additional Support for controlling static and skeletal meshes through physical controls",
+	"Category": "Physics",
 	"CreatedBy": "Epic Games, Inc.",
 	"CreatedByURL": "https://epicgames.com",
 	"DocsURL": "",
