WebSocket - Packet fragmentation support and upper memory limit for receiving utf-8 messages. Differenciate between binary and text frame for events. #jira UE-118244, UE-100473, UE-170539, UE-149367, UE-97000 [REVIEW] [at]Bertrand.Carre [at]Michael.Kirzinger [at]Jake.Niman #preflight 63c049370b358b97d1e8b68c
[CL 23727573 by camillo lukesch in ue5-release-engine-staging branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -72,6 +72,7 @@ RemoveURLMappingEntriesWithoutPhysicalTempFiles=true
 +WebSocketsProtocols="v11.stomp"
 +WebSocketsProtocols="v12.stomp"
 +WebSocketsProtocols="xmpp"
+TextMessageMemoryLimit=1048576
 
 [WebSockets.LibWebSockets]
 ThreadStackSize=131072
